<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <!--/******** Rahul Rokade 02-21_22 ********/-->
    <TextView
        android:id="@+id/lbl_title"
        style="@style/MyTitle"
        android:layout_margin="5dp"
        android:paddingLeft="10dp"
        android:text="@string/str_title_type_swm_facility"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/dim_20_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorDivider" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rd_btn_ts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:checked="false"
            android:text="@string/rd_btn_ts"
            android:textColor="@color/colorGrayList"
            android:textSize="@dimen/dim_14_sp" />

        <RadioButton
            android:id="@+id/rd_btn_wwpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:checked="false"
            android:text="@string/rd_btn_wwpf"
            android:textColor="@color/colorGrayList"
            android:textSize="@dimen/dim_14_sp" />

        <RadioButton
            android:id="@+id/rd_btn_dwpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:checked="false"
            android:text="@string/rd_btn_dwpf"
            android:textColor="@color/colorGrayList"
            android:textSize="@dimen/dim_14_sp" />
        <RadioButton
            android:id="@+id/rd_btn_cdwpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:checked="false"
            android:text="@string/rd_btn_cdwpf"
            android:textColor="@color/colorGrayList"
            android:textSize="@dimen/dim_14_sp" />
        <RadioButton
            android:id="@+id/rd_btn_ifd_swp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:checked="false"
            android:text="@string/rd_btn_ifd_swp"
            android:textColor="@color/colorGrayList"
            android:textSize="@dimen/dim_14_sp" />
        <RadioButton
            android:id="@+id/rd_btn_slf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:checked="false"
            android:text="@string/rd_btn_slf"
            android:textColor="@color/colorGrayList"
            android:textSize="@dimen/dim_14_sp" />
        <RadioButton
            android:id="@+id/rd_btn_lwbf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:checked="false"
            android:text="@string/rd_btn_lwbf"
            android:textColor="@color/colorGrayList"
            android:textSize="@dimen/dim_14_sp" />
        <RadioButton
            android:id="@+id/rd_btn_stp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:checked="false"
            android:text="@string/rd_btn_stp"
            android:textColor="@color/colorGrayList"
            android:textSize="@dimen/dim_14_sp" />
        <RadioButton
            android:id="@+id/rd_btn_bwg_wwp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:checked="false"
            android:text="@string/rd_btn_bwg_wwp"
            android:textColor="@color/colorGrayList"
            android:textSize="@dimen/dim_14_sp" />

    </RadioGroup>


    <Button
        android:id="@+id/btn_swm_submit"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dim_80_dp"
        android:layout_marginTop="@dimen/dim_10_dp"
        android:layout_marginRight="@dimen/dim_80_dp"
        android:layout_marginBottom="@dimen/dim_10_dp"
        android:text="@string/submit_txt" />
</LinearLayout>